--- a/src/pages/book/book-page.module.css
+++ b/src/pages/book/book-page.module.css
@@ -2,12 +2,8 @@
 
 .filling {
     display: table-row;
-    height: 75vh;
+    height: 59vh;
 }
-
-
-
-
 
 .noneClickable {
     width: 100%;
@@ -619,4 +615,41 @@
 
 .none {
     display: none;
+}
+
+.reviewsNumber {
+    margin-left: 2%;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+
+    letter-spacing: 0.1px;
+
+
+    color: #A7A7A7;
+}
+
+
+.ratingWrapper {
+
+    display: flex;
+    align-items: center;
+    margin: 1% 0 2% 0;
+}
+
+.rating {
+    text-align: center;
+    margin-left: 2%;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 28px;
+
+    letter-spacing: 0.1px;
+
+
+    color: #363636;
 }
