--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -17,7 +17,6 @@
     height: 38px;
 
     background: #FFFFFF;
-    /* плашка */
     border: none;
     box-shadow: 0px 2px 4px rgba(191, 196, 201, 0.2), 0px 3px 4px rgba(191, 196, 201, 0.18), 0px 1px 5px rgba(191, 196, 201, 0.24);
     border-radius: 599px;
@@ -26,11 +25,10 @@
     background-repeat: no-repeat;
     background-position: 17px;
 
-    /*Позиционируем*/
     outline: none;
-    /*закругляем углы для остальных браузеров*/
     padding-left: 40px;
 
+    caret-color: #F83600;
 
 
 }
@@ -95,6 +93,22 @@
 }
 
 .filterButtonLarge {
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+
+    letter-spacing: 0.1px;
+
+    color: #A7A7A7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.filterButtonSmall {
     width: 150px;
     height: 38px;
     border: none;
@@ -109,23 +123,15 @@
     align-items: center;
 }
 
-.filterButtonSmall {
-    width: 38px;
-    height: 38px;
-    border: none;
-    background: #FFFFFF;
+.filterButtonSmall img {
+    margin-right: 5%;
 
-
-    box-shadow: 0px 2px 4px rgba(191, 196, 201, 0.2), 0px 3px 4px rgba(191, 196, 201, 0.18), 0px 1px 5px rgba(191, 196, 201, 0.24);
-    border-radius: 599px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.filterButtonLarge img {
-    margin-right: 5%;
+
+
+.reflection {
+    transform: scale(1, -1);
 }
 
 .SearchButton {
@@ -155,14 +161,19 @@
     .filterButtonLarge {
         display: none;
     }
+
+    .filterButtonSmall {
+        width: 38px;
+        height: 38px;
+    }
 }
 
 @media screen and (min-width: 599px) {
 
 
-    .filterButtonSmall {
+    /* .filterButtonSmall {
         display: none;
-    }
+    } */
 }
 
 @media screen and (max-width: 320px) {
