--- a/src/pages/book/book-page.module.css
+++ b/src/pages/book/book-page.module.css
@@ -1,3 +1,47 @@
+.ratingWrapper {
+    display: flex;
+    align-items: center;
+    margin: 1% 0 2% 0;
+}
+
+.ratingWrapper img:not(:nth-child(1)) {
+
+
+    margin-left: 5%;
+}
+
+.rating {
+    width: 168px;
+}
+
+.ratingText {
+    display: flex;
+    text-align: center;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 28px;
+
+    letter-spacing: 0.1px;
+
+
+    color: #363636;
+}
+
+.noRating {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+
+    letter-spacing: 0.1px;
+
+
+    color: #363636;
+}
+
 .filling {
     display: table-row;
     height: 59vh;
@@ -520,6 +564,15 @@
         color: #363636;
         width: 100%;
     }
+
+    .ratingWrapper {
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
+    .rating {
+        width: 220px;
+    }
 }
 
 
@@ -627,27 +680,4 @@
 
 
     color: #A7A7A7;
-}
-
-
-.ratingWrapper {
-
-    display: flex;
-    align-items: center;
-    margin: 1% 0 2% 0;
-}
-
-.rating {
-    text-align: center;
-    margin-left: 2%;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 28px;
-
-    letter-spacing: 0.1px;
-
-
-    color: #363636;
 }
