--- a/src/components/layout-page/layout-page.module.css
+++ b/src/components/layout-page/layout-page.module.css
@@ -1,78 +1,74 @@
 .loader {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: rgba(54, 54, 54, 0.3);
-    z-index: 1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(54, 54, 54, 0.3);
+  z-index: 1;
 }
 
 .loaderAnimation {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 68px;
-    height: 68px;
-    border: 7px solid #F83600;
-    color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 68px;
+  height: 68px;
+  border: 7px solid #f83600;
+  color: black;
 
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
 @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .noneClickable {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 2%;
-    flex-grow: 1;
-
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 2%;
+  flex-grow: 1;
 }
 
 .content {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .sidebar {
-    display: flex;
-    justify-content: left;
-    width: 24%;
+  display: flex;
+  justify-content: left;
+  width: 24%;
 }
-
 
 .navigationWrapper {
-    width: 70%;
+  width: 70%;
 }
 
-
-
 @media screen and (max-width: 768px) {
-    /* .boooksContentWrapper {
+  /* .boooksContentWrapper {
         width: 100%;
         display: flex;
         align-items: center;
@@ -83,11 +79,11 @@
 
     } */
 
-    .sidebar {
-        display: none;
-    }
+  .sidebar {
+    display: none;
+  }
 
-    .navigationWrapper {
-        width: 100%;
-    }
+  .navigationWrapper {
+    width: 100%;
+  }
 }
