--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -1,59 +1,57 @@
 .loader {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(54, 54, 54, 0.3);
-    z-index: 1;
-    backdrop-filter: blur(10px);
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(54, 54, 54, 0.3);
+  z-index: 1;
+  backdrop-filter: blur(10px);
 }
 
 .loaderAnimation {
-    position: fixed;
-    top: 47%;
-    left: 47%;
-    width: 68px;
-    height: 68px;
-    border: 7px solid #F83600;
-    color: black;
+  position: fixed;
+  top: 47%;
+  left: 47%;
+  width: 68px;
+  height: 68px;
+  border: 7px solid #f83600;
+  color: black;
 
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
 @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .loaderAnimation {
-        width: 44px;
-        height: 44px;
-    }
+  .loaderAnimation {
+    width: 44px;
+    height: 44px;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .loaderAnimation {
-        width: 22px;
-        height: 22px;
-    }
+  .loaderAnimation {
+    width: 22px;
+    height: 22px;
+  }
 
-    .loaderAnimation {
+  .loaderAnimation {
+    border: 3px solid #f83600;
+    color: black;
 
-        border: 3px solid #F83600;
-        color: black;
-
-        border-bottom-color: transparent;
-
-    }
+    border-bottom-color: transparent;
+  }
 }
